// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagCount component Render the modal open with row of tags 1`] = `
<Modal
  actions={Array []}
  ariaDescribedById=""
  className=""
  hideTitle={false}
  isFooterLeftAligned={true}
  isLarge={false}
  isOpen={true}
  isSmall={false}
  onClose={[Function]}
  rows={
    Array [
      Array [
        "key",
        "value",
      ],
      Array [
        "thing",
        "otherthing",
      ],
    ]
  }
  title="Tags for paul.localhost.com"
>
  <Table
    borders={true}
    cells={
      Array [
        Object {
          "title": "Name",
        },
        Object {
          "title": "Tag Source",
        },
      ]
    }
    className=""
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    onCollapse={null}
    onExpand={null}
    role="grid"
    rowLabeledBy="simple-node"
    rows={
      Array [
        Array [
          "key",
          "value",
        ],
        Array [
          "thing",
          "otherthing",
        ],
      ]
    }
    variant="compact"
  >
    <TableHeader
      className=""
    />
    <TableBody
      className=""
      onRowClick={[Function]}
      rowKey="id"
    />
  </Table>
</Modal>
`;

exports[`TagCount component Render the modal with a child component 1`] = `
<Modal
  actions={Array []}
  ariaDescribedById=""
  className=""
  hideTitle={false}
  isFooterLeftAligned={true}
  isLarge={false}
  isOpen={true}
  isSmall={false}
  onClose={[Function]}
  title="Tags for paul.localhost.com"
>
  <h1>
    I am a chile component
  </h1>
  <Table
    borders={true}
    cells={
      Array [
        Object {
          "title": "Name",
        },
        Object {
          "title": "Tag Source",
        },
      ]
    }
    className=""
    contentId="expanded-content"
    dropdownDirection="down"
    dropdownPosition="right"
    expandId="expandable-toggle"
    gridBreakPoint="grid-md"
    onCollapse={null}
    onExpand={null}
    role="grid"
    rowLabeledBy="simple-node"
    variant="compact"
  >
    <TableHeader
      className=""
    />
    <TableBody
      className=""
      onRowClick={[Function]}
      rowKey="id"
    />
  </Table>
</Modal>
`;
